# mwe-fastapi-debug

./: .dockerignore  .gitignore  Dockerfile  README.md  Vagrantfile  docker-compose.debug-pycharm.yml  docker-compose.debug-vscode.yml  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
mwe_fastapi_debug/: __init__.py  config.py  debug.py  main.py
tests/: __init__.py  conftest.py  test_api.py
